<?xml version="1.0" encoding="utf-8"?>
<!-- The five tabs, with the icon and label for each. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/shell_nav_home" />
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_transactions"
        android:title="@string/shell_nav_activity" />
    <item
        android:id="@+id/budgetsFragment"
        android:icon="@drawable/ic_budgets"
        android:title="@string/shell_nav_budgets" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/shell_nav_reports" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/shell_nav_profile" />
</menu>
