...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSubtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:minHeight="@dimen/touch_target_min"
...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/touch_target_min"
...
                app:helperText="@string/authx_password_helper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="newPassword"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/touch_target_min"
...
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="newPassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/touch_target_min"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayoutConfirm"
                tools:text="An account with that email already exists"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                style="@style/Widget.SpendWise.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/auth_sign_up"
                app:cornerRadius="@dimen/corner_radius_lg"
...
